k8s-scheduling/statefulsets/todo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    name: todo
    team: todo-app
    environment: dev
