k8s-scheduling/statefulsets/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-service
  namespace: todo
spec:
  selector:
    app: todo-ui
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
