k8s-scheduling/statefulsets/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: todo
spec:
  selector:
    app: todo-api
  ports:
    - port: 80
      targetPort: 8082
      protocol: TCP
  type: ClusterIP
